--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="jumbotron">
         <h1>RESTful API web_app</h1>
-
+        <a href="employees">for API</a>
       </div>
 
     </div>
