sign up form commit

--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -6,10 +6,32 @@
     <title></title>
   </head>
   <body>
+    <header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <div class="container">
+          <a class="navbar-brand mr-4">Django Blog</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="navbar-nav mr-auto">
+              <a class="nav-item nav-link" >Home</a>
+            </div>
+            <!-- Navbar Right Side -->
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="container">
       <div class="jumbotron">
-        <h1>RESTful API web_app</h1>
-        <a href="employees">for API</a>
+        {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+        {% block content %}{% endblock content %}
       </div>
 
     </div>
