sign up 2 form commit

--- a/web_app/templates/web_app/home.html
+++ b/web_app/templates/web_app/home.html
@@ -1,6 +1,9 @@
 {% extends "web_app/index.html" %}
 {% block content %}
-<h1>RESTful API web_app</h1>
+<h1>welcome,</h1>
+<h3>To my website</h3>
+<hr>
 <a href="employees">for API</a>
+<hr>
 <a href="register"> for sign up</a>
 {% endblock content %}
