--- a/web_app/templates/web_app/home.html
+++ b/web_app/templates/web_app/home.html
@@ -3,7 +3,7 @@
 <h1>welcome,</h1>
 <h3>To my website</h3>
 <hr>
-<a href="employees">for API</a>
+<a href="api">for API</a>
 <hr>
 <a href="register"> for sign up</a>
 {% endblock content %}
