receving confirmation mail with name commit

--- a/web_users/templates/web_users/logout.html
+++ b/web_users/templates/web_users/logout.html
@@ -1,6 +1,6 @@
 {% extends "web_app/index.html" %}
 {% block content %}
-<h1>You have succesfull logd out</h1>
+<h1>You have succesfull logout</h1>
     <div class="border-top pt-3">
         <small class="text-muted">
           <a href="{% url 'login' %}">Sign in</a>
