--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -29,6 +30,7 @@
                 <a class="nav-item nav-link" href="{% url 'profile' %}">pofile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
+                <a class="nav-item nav-link" href="{% url 'register' %}">Signup</a>
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               {% endif %}
