--- a/web_users/templates/web_users/profile.html
+++ b/web_users/templates/web_users/profile.html
@@ -19,5 +19,16 @@
   <!-- profile pic path -- >
     </div>
     <!-- FORM HERE -->
+    <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Profile info</legend>
+          {{ u_form|crispy }}
+          {{ p_form|crispy }}
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit">Update</button>
+      </div>
+    </form>
 </div>
 {% endblock content %}
